@@ -18,23 +18,22 @@
  */
 package com.thinkenterprise;
 
-import org.springframework.beans.BeansException;
-import org.springframework.beans.factory.BeanFactory;
-import org.springframework.beans.factory.BeanFactoryAware;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import com.thinkenterprise.domain.tracking.FlightStatus;
 import com.thinkenterprise.domain.tracking.Tracking;
-import com.thinkenterprise.message.amqp.AmqpSender;
+import com.thinkenterprise.message.amqp.AmqpProducer;
 
 @Component
-public class AmqProducerCallerScheduling implements BeanFactoryAware {
+public class AmqProducerCallerScheduling  {
 
-	
-	public static Long counter = new Long(0);
+	 
+	public static Long counter = Long.valueOf(0);
 
-	private static BeanFactory context;
+	@Autowired
+	private AmqpProducer amqpProducer;
 
 	@Scheduled(initialDelay = 5000, fixedDelay = 5000)
 	public void sendTracking() {
@@ -42,15 +41,8 @@ public class AmqProducerCallerScheduling implements BeanFactoryAware {
 		tracking.setRouteId(counter++);
 		tracking.setFlightNumber("LH7902");
 		tracking.setStatus(FlightStatus.DELAYED);
-
-		AmqpSender sender = context.getBean(AmqpSender.class);
-		sender.sendMessage(tracking);
-	}
-
-	@Override
-	public void setBeanFactory(BeanFactory beanFactory) throws BeansException {
-		this.context = beanFactory;
-
+	
+		amqpProducer. sendMessage(tracking);
 	}
 
 }
